completed email setup
