# api.yaml
@@ -124,13 +124,7 @@ paths:
   /api/v1/auth/register:
     post:
       summary: For registering a new user.
-      description: User must not be already registered or he will get a Conflict error. User chooses by which method (sms/email) he wants to be verified (using otp). Chosen method will be sent as a query parameter.
-      parameters:
-      - in: query
-        name: method
-        type: string
-        enum: ['sms', 'email']
-        required: true
+      description: User must not be already registered or he will get a Conflict error. User can enter either phone number or email then he will recieve email/sms according to his entry to verify his account.
       produces:
       - application/json
       parameters:
@@ -145,10 +139,7 @@ paths:
             familyName:
               type: string
               required: true
-            phoneNumber:
-              type: string
-              required: true
-            email:
+            identifier:
               type: string
               required: true
             password:
@@ -188,7 +179,7 @@ paths:
   /api/v1/auth/login:
     post:
       summary: For logging in a user.
-      description: User must be already registered.
+      description: User must be already registered. He must enter email or phone number that he used for registration.
       produces:
       - application/json
       parameters:
@@ -197,7 +188,7 @@ paths:
         schema:
           type: object
           properties:
-            phoneNumber:
+            identifier:
               type: string
               required: true
             password:
