# controllers/authOperations/registerController.js
@@ -1,8 +1,6 @@
 const createError = require('http-errors');
 const UserModel = require('../../models/User');
-const UserOTPVerification = require('../../models/UserOTPVerification');
-const sendSMS = require('../../helpers/sendSMS');
-const sendEmail = require('../../helpers/sendEmail');
+const sendOTP = require('../../helpers/sendOTP');
 const {
   signAccessToken,
   signRefreshToken,
@@ -13,65 +11,42 @@ class RegisterController {
     const {
       name,
       familyName,
-      phoneNumber,
-      email,
+      identifier,
       password,
     } = req.body;
 
-    const { method } = req.query;
+    const method = identifier.indexOf('@') > -1 ? 'email' : 'phoneNumber';
 
     // check for duplicate usernames in the db
     const duplicateUser = await UserModel.findOne({
-      phoneNumber,
+      identifier,
     }).exec();
+
     if (duplicateUser) {
       res.status(409);
-      createError.Conflict(`User with ${phoneNumber} already exists.`);
+      throw createError.Conflict();
     }
 
-    // If everything was okay and phoneNumber wasnt already in the db
+    // If everything was okay and user wasnt already in the db
     try {
-      // Crete OTP
-      const otp = `${Math.floor(1000 + Math.random() * 9000)}`;
-
-      // Store OTP in OTP db
-      const userOTPRecord = await UserOTPVerification.create({
-        otp,
-        createdAt: Date.now(),
-        expiredAt: Date.now() + 60 * 1000,
-      });
-
-      // console.log('otp', otp);
+      const verificationId = await sendOTP(method, identifier);
+      console.log('verificationId', verificationId);
 
       // Now create and store the user in the db
       const user = await UserModel.create({
         name,
         familyName,
-        phoneNumber,
-        email,
+        method,
+        identifier,
         password,
-        verificationId: userOTPRecord.id,
+        verificationId,
       });
+
       const userId = user._id.toString(); // eslint-disable-line no-underscore-dangle
       const accessToken = await signAccessToken(userId);
       const refreshToken = await signRefreshToken(userId);
-      console.log('user.verificationId', user.verificationId);
 
-      // Now send verification SMS/email
-      let isOTPSent = false;
-      if (method === 'sms') {
-        isOTPSent = await sendSMS(phoneNumber, `
-          This is your verification code: ${otp}, Notice that it expires in 1 minute!
-        `);
-      } else {
-        isOTPSent = await sendEmail('miralaienegar@gmail.com', 'Verify your account', `This is your verification code: ${otp}`);
-      }
-
-      const verificationId = userOTPRecord.id;
-      if (isOTPSent) {
-        console.log('otp', otp);
-        console.log('verificationId', verificationId);
-
+      if (verificationId) {
         return res
           .status(201)
           .send({
