# middleware/validateFields/validateLoginFields.js
@@ -1,13 +1,23 @@
 const {
   check,
+  oneOf,
 } = require('express-validator');
 
 exports.validateLoginFields = [
-  check('phoneNumber')
-    .trim()
-    .isLength(11)
-    .bail()
-    .isMobilePhone(),
+  oneOf([
+    check('identifier')
+      .trim()
+      .isLength(11)
+      .bail()
+      .isMobilePhone(),
+    check('identifier')
+      .trim()
+      .notEmpty()
+      .bail()
+      .escape()
+      .isEmail()
+      .withMessage('Email is invalid'),
+  ]),
   check('password')
     .trim()
     .not()
